--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,12 @@ plugins:
 sass:  
   sass_dir: _sass 
 
-
+comments:
+  provider: disqus
+  
+disqus:
+  shortname: kyechan99-1
+  
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
