--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ comments:
   provider: disqus
   
 disqus:
-  shortname: kyechan99-1
+  shortname: kyechan99-github-io
   
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
