--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ email: kyechan99@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://kyechan99.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  kyechan99
 
 # Build settings
