--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: kyechan99
-name: 강예찬 
+name: Ye-Chan Kang 
 email: kyechan99@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://kyechan99.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  kyechan99
+github_username: "kyechan99"
+kakao_id: "@kyechan99"
 
 # Build settings
 markdown: kramdown
