Pre Highlight - Rouge

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,8 @@ comments:
   
 disqus:
   shortname: kyechan99-github-io
-  
+ 
+highlighter: rouge
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
