--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: 강예찬 개발 블로그
+title: kyechan99
 name: Ye-Chan Kang 
 email: kyechan99@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
