--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     ],
     "paths": {
       "contentlayer/generated": ["./.contentlayer/generated"],
+      "@public": ["./public/*"],
       "@/*": ["./src/*"]
     }
   },
